styles.css
/*
	BORDER BOX RESET
*/
html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

:root {
  --dark-blue: #1a2236;
  --text-size-p: 14px;
  --text-size-button: 16px;
  --text-size-h1: 50px;
  --text-size-h4: 20px;
  --text-size-span: 10.33px;
  --color-project-tech-stack-tag: #98dede;
}

/* HEADER */
.header {
  flex-direction: row-reverse;
  padding: 20px;
  background: no-repeat url("images/decorative_bg_1.png");
  background-size: contain;
}

.nav {
  display: flex;
  justify-content: flex-end;
}

.logo {
  position: absolute;
  top: 0;
  left: 0;
}

/* CTA */
.CTA {
  display: flex;
  flex-direction: column;
}

.CTA-decorative-img {
  width: 100%;
}

.projects {
  display: grid;
  grid-template-columns: 1fr;
}

.projects-header {
  margin: 20px;
}

.project-card {
  display: flex;
  flex-direction: column;
  gap: 10px;
  background: var(--dark-blue);
  padding-bottom: 10px;
}

.card-details {
  margin: 0 20px;
}

.project-name {
  color: white;
  font: var(--text-size-h4) "Poppins", serif;
}

.project-tech-stack-tags {
  display: flex;
  align-items: center;
}

.project-tech-stack-tags > * {
  display: inline-block;
  padding: 5px 10px;
  margin-right: 10px;
  color: var(--dark-blue);
  font: var(--text-size-span) "Poppins", serif;
  background: var(--color-project-tech-stack-tag);
}

.project-details-button {
  width: fit-content;
  border: solid 2px white;
}

.project-details-button span {
  font: var(--text-size-button) "Poppins", serif;
}

.article-container {
  padding: 20px;
}

.article-header {
  font: var(--text-size-h1) "Playfair Display", serif;
  color: var(--dark-blue);
  line-height: 100%;
}

.article-summery {
  padding: 20px 0;
  font: var(--text-size-p) "Poppins", serif;
  color: var(--dark-blue);
}

.button {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  height: 50px;
  padding: 10px 20px;
  background: var(--dark-blue);
  color: white;
  font: var(--text-size-button) "Poppins", serif;
  text-decoration: none;
}

.tech-stack {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin: 20px;
  padding: 50px;
  background-repeat: no-repeat;
  background-position: bottom right;
}

.tech-stack-category {
  font: var(--text-size-h4) "Poppins", serif;
  font-weight: bolder;
  color: white;
}

.tech-stack-list {
  list-style: none;
  font: 18px "Poppins", serif;
  font-weight: bold;
  color: white;
}

.tech-stack-list li::before {
  display: inline-block;
  width: 1em;
  content: "\2022";
  color: white;
}

.languages {
  background-color: #1c528a;
  background-image: url("images/ic_languages.png");
}

.frameworks {
  background-color: #e2505c;
  background-image: url("images/ic_frameworks.png");
}

.skills {
  background-color: #febf52;
  background-image: url("images/ic_skills.png");
}


.form-section {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 100px 20px 20px 20px;
  background-color: #f9f9fa;
  background-image: url("images/decorative_bg_1.png");
  background-repeat: no-repeat;
}

.contact-form {
  display: flex;
  flex-direction: column;
  gap:  10px;
}

.input-field {
  border:  solid 2px #dfdfe0;
  border-radius: 4px;
  padding: 10px;
  background: #ffffff;
}

.input-field
label {
  display: block;
  font: 10px "Poppins", serif;
  color: #7d7c84;
}

.input-field
.input-field-style {
  display: block;
  width: 100%;
  border: none;
  background: transparent;
  font: var(--text-size-p) "Poppins", serif;

}

.input-field
.input-field-style:focus,
.text-area:focus {
  outline: none;
}

.text-area {
  min-height: 112px ;
  background: transparent;
  font: 14px "Poppins", serif;
  background: #ffffff;
}




.form-button {
  border: none;
}

